aregle un bug en el dark mode

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 .active{
   @apply dark:bg-gray-900 bg-gray-200 
+}
+
+body {
+  @apply h-screen bg-gray-50 dark:bg-gray-900;
 }
